2025-02-21  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.3-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha03: Equalizer';git push
	git tag -a 5.3.3-alpha03 -m 'ncks: ngl rsn chk map';git push --tags

	* nco_map.c: Add min/max angular resolution to --chk_map

2025-02-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.3-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha02: Toyota Matrix';git push
	git tag -a 5.3.3-alpha02 -m 'all: qnt ngt zro NaN; ncks: --fpe; ncremap: fix prs->hyb w/fat tpl';git push --tags

	* Migrate to netcdf-c 4.10.0-development

	* nco_rgr.c: Fix write of PS to output from fat templates when input is pure-pressure output is hybrid

2025-02-15  Charlie Zender  <zender@uci.edu>

	* Verify --fpe test passes when using either internal NCO or patched libnetcdf.a quantize algorithms

	* Distinguish val_flt and val_dbl de-reference where appropriate (except DigitRound and Granular BitRound, for now)

	* nco_exit_lbr_rcd() implement new rcd convention for netCDF versions 4.10.0 and beyond

2025-02-14  Charlie Zender  <zender@uci.edu>

	* nco_ppc.c: nco_ppc_bitmask() protect all quantization algorithms from modifying negative zero and NaN

	* ncks: Add --fpe to test floating point exceptions

2025-02-08  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.3-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.3-alpha01: Arcane';git push
	git tag -a 5.3.3-alpha01 -m 'Functionally identical to 5.3.2; ncrename WARN on netCDF4';git push --tags

	* ncrename: WARN when renaming variables or dimensions in netCDF4 files

2025-02-05  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.2 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.2: Prime Rib';git push
	git tag -a 5.3.2 -m 'all: fix qnt w/ grp; ncremap: ECMWF/IFS CAMS lnsp lev_2, ps_nm_out mtd, hyb cff cf mtd, fix ECMWF/IFS ntp ERROR/HINT, inode dpl, srun default';git push --tags

2025-02-03  Charlie Zender  <zender@uci.edu>
